マウス座標

--- a/FormApp/BallApp/BallApp.csproj
+++ b/FormApp/BallApp/BallApp.csproj
@@ -23,4 +23,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="picture\soccer_ball.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
