テニスボールメソッド実装

--- a/FormApp/BallApp/BallApp.csproj
+++ b/FormApp/BallApp/BallApp.csproj
@@ -27,6 +27,9 @@
     <None Update="picture\soccer_ball.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="picture\tennis_ball.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
